--- a/ucosii_sim_x64.vcxproj.filters
+++ b/ucosii_sim_x64.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="app\app_cfg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="ports\win32_interface\os_cpu.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ucosii\os_core.c">
@@ -65,16 +68,16 @@
     <ClCompile Include="ucosii\os_tmr.c">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="ports\win32\os_cpu_c.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="ports\win32\os_dbg.c">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="app\main.c">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="app\tasks.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ports\win32_interface\os_cpu_c.c">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ports\win32_interface\os_dbg.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
